- fixed the warning and comments from SonarLint - removed unnecessary tests for TagService - tested the functionality 'deleteTagFromBlogPost'